fix some problem on mobile device

--- a/src/styles/dashboard-viewer.css
+++ b/src/styles/dashboard-viewer.css
@@ -17,3 +17,7 @@
 .widget-full-screen .widget-content {
   padding: 20px !important;
 }
+
+.widget-title-container {
+  height: 30px;
+}
